--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -14,7 +14,7 @@
     @@include('layout/header.html',{"headerClass":""})
     <section class="articleContent">
         <h2 class="deepColor">藝論</h2>
-        <input type="radio" name="whoPost" class="listchoose" id="officePost" checked>
+        <!-- <input type="radio" name="whoPost" class="listchoose" id="officePost" checked>
         <input type="radio" name="whoPost" class="listchoose" id="memberPost">
         <section class="switchBar">
             <label for="officePost">熱門文章</label>
@@ -107,15 +107,6 @@
                         </section>
                     </a>
                 </article>
-                <!-- <article class="article7">
-                    <a href="">
-                        <section class="pic">
-                            <img src="assets/image/home_homeCatalog_elmoSculpt.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第三章</h4>
-                        <p class="lightColor">程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場，所有人選項服飾</p>
-                    </a>
-                </article> -->
             </section>
             <section class="content memberPost">
                 <article class="article1">
@@ -196,85 +187,6 @@
                         </section>
                     </a>
                 </article>
-                <!-- <article class="article7">
-                    <a href="">
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
-                        </section>
-                        <h4 class="deepColor">第三章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </a>
-                </article> -->
-            </section>
-        </section>
-        <!-- <section class="content_group">
-            <section class="content officePost">
-                <section class="leftArticle">
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_bag.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第一章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_jeffBollun.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第二章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                </section>
-                <section class="rightArticle">
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_kawsHolding.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第三章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_plate.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第四章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                </section>
-            </section>
-            <section class="content memberPost">
-                <section class="leftArticle">
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_beBear.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第一章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_sculpt.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第二章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                </section>
-                <section class="rightArticle">
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_flowerPainting.jpeg" alt="">
-                        </section>
-                        <h4 class="deepColor">第三章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                    <article>
-                        <section class="pic">
-                            <img src="assets/image/article_articleContent_bighead.png" alt="">
-                        </section>
-                        <h4 class="deepColor">第四章</h4>
-                        <p class="lightColor">h4程式溝通那位朋友翻譯銷售，作品採訪民族一點，管理員一邊現場。</p>
-                    </article>
-                </section>
             </section>
         </section> -->
     </section>
