--- a/html/articlePost.html
+++ b/html/articlePost.html
@@ -48,7 +48,8 @@
                                     <img src="https://picsum.photos/500/400/?random=10">
                                 </div>
                                 <div class="txt">
-                                    <p class="deepColor">這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？這篇文章在講甚麼？</p>
+                                    <!-- 最多顯示100字 -->
+                                    <p class="deepColor">造成歡迎光臨並非此時其實中心，接着科技居民引擎第三，導航許可才會那些無比勝利另一伺服器唱片，專家幾天拍攝沒人幫助位於功夫司機千萬有一國際主板文字股市解壓，它們必要大多數不但教程進度設立人類，廣大線上...</p>
                             </div>
                     </div>
                 </div>
