--- a/html/homePage.html
+++ b/html/homePage.html
@@ -106,7 +106,7 @@
                     <div class="pic">
                         <img src="assets/image/home_homeNews_author.jpg" alt="">
                     </div>
-                    <div class="content">
+                    <div class="txtContent">
                         <div class="txt">
                             <h3 class="deepColor">藝術家村上隆</h3>
                             <p class="lightColor">出生於1962年2月1日是一位日本藝術家。他曾就學於東京藝術大學。受日本動畫和日本漫畫影響而專注於御宅族文化和生活方式的後現代藝術風格——超扁平（Superflat）運動創始人。</p>
