--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -14,6 +14,152 @@
     @@include('layout/header.html',{"headerClass":""})
     <section class="articleContent">
         <h2 class="deepColor">藝論</h2>
+        <section class="flat">
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_silk.png" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">這是一個背包</h4>
+                            <p class="lightColor small">這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">看起來普通的氣球</h4>
+                        <p class="lightColor small">它不只是一顆氣球，nonono它是一顆氣球。跟知名大師聯名，買到賺到，因為它是一顆金屬氣球，怎麼樣玩它都不會破。</p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_glass.png" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">盤子的歷史</h4>
+                        <p class="lightColor small">
+                            你是否常常也有一樣的疑問，為什麼我買的東西就是比較貴？物價飆漲，甚麼都漲就連海平面也漲，為什麼我的錢包就是沒有漲？為了這個問題，我深入研究了許久，終於得到答案。
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">花畫畫畫花</h4>
+                            <p class="lightColor small">
+                                雨 我是大雨降落在你身上 卻弄壞衣裳我只是想 和你玩耍待在你身旁 欣賞你的光芒。但你不願 你不再 你不再 你不願再想起,有我的過去 有我的記憶,你曾說 曾經你說過 我藏著秘密，我不夠透明 我不夠真心。
+                            </p>
+                    </div>
+                </div>
+            </a>
+        </section>
+        <section class="newest">
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+        </section>
+        <section class="threeRows">
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+        </section>
+        <section class="fourRows">
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+
+                    </div>
+                    <div class="txt">
+
+                    </div>
+                </div>
+            </a>
+        </section>
         <!-- <input type="radio" name="whoPost" class="listchoose" id="officePost" checked>
         <input type="radio" name="whoPost" class="listchoose" id="memberPost">
         <section class="switchBar">
