--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -14,7 +14,7 @@
     @@include('layout/header.html',{"headerClass":""})
     <section class="articleContent">
         <h2 class="deepColor">藝論</h2>
-        <section class="flat">
+        <section class="wrap flat">
             <a href="">
                 <div class="item">
                     <div class="pic">
@@ -64,7 +64,7 @@
                 </div>
             </a>
         </section>
-        <section class="newest">
+        <section class="wrap newest">
             <a href="">
                 <div class="item">
                     <div class="pic">
@@ -86,7 +86,7 @@
                 </div>
             </a>
         </section>
-        <section class="threeRows">
+        <section class="wrap threeRows">
             <a href="">
                 <div class="item">
                     <div class="pic">
@@ -118,7 +118,7 @@
                 </div>
             </a>
         </section>
-        <section class="fourRows">
+        <section class="wrap fourRows">
             <a href="">
                 <div class="item">
                     <div class="pic">
