--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -19,9 +19,9 @@
     <section class="SingleProductHead">
         <div class="productBread size marginAuto">
             <p>
-                <span>logo</span>
-                <span>>雕塑類</span>
-                <span>>芹芹的大師之作</span>
+                <span class="small lightColor">logo</span>
+                <span class="small lightColor">>雕塑類</span>
+                <span class="small epBColor">>芹芹的大師之作</span>
             </p>
         </div>
     </section>
@@ -54,37 +54,49 @@
                 </div>
                 <div class="introAll">
                     <article class="introBox">
-                        <h2>芹芹的大師之作</h2>
+                        <h2 class="deepColor">芹芹的大師之作</h2>
                         <div class="introtext">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia molestias magni quos nesciunt minus. Doloremque vero odit, ipsa consequatur et, molestias earum alias unde veniam praesentium eveniet omnis? Minima, a?
+                            <p class="deepColor">
+                                藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。作品中的黑色區塊是曾偉豪從一些對話和自然環境錄音擷取下來的頻率圖，當這些圖樣翻轉成垂直時，非常像樹的樣子，所以藝術家希望透過這樣的視覺形式和身體接觸的互動聲音，讓觀眾感受到被聲音穿透的感覺，就像進入一個由話語聲音所構成的森林風景。
+                            </p>
                         </div>
                         <div class="time">
-                            <span>2小時47分17秒結束</span>
-                            <span>&#124;</span>
-                            <span>星期一，中午12點27分</span>
+                            <p class="lightColor">2小時47分17秒結束</p>
+                            <p class="lightColor">星期一，中午12點27分</p>
                         </div>
                         <div class="bidBox bid">  
-                            <div><p>目前出價</p></div>
-                            <div><p>$5,000</p></div>
+                            <div>
+                                <h4 class="deepColor">
+                                    目前出價：<span class="deepColor">$5,000</span>
+                                </h4>
+                            </div>
                             <div>
                                 <a href="">
-                                    <span>投標</span>
-                                    <span>30筆</span>
+                                    <span class="lightColor small">投標紀錄</span>
+                                    <span class="lightColor small">30</span>
+                                    <span class="lightColor small">筆</span>
                                 </a>
                             </div>
                         </div>
                         <div class="bidBox buy">  
-                            <div><p>直購價</p></div>
-                            <div><p>$50,000</p></div>
+                            <div>
+                                <h4 class="deepColor">
+                                    直購價：<span class="epBColor">$50,000</span>
+                                </h4>
+                            </div>
                         </div>
                         <div class="bidBox inputBox">
-                            <input type="text">
+                            <input type="text" placeholder="5,300">
                         </div>
                         <div class="bidBox hint">
-                            投入$5300元或更多
+                            <span class="small lightColor">
+                                投入$5,300元或更多
+                            </span>
                         </div>
                         <div class="like mainColor deepBgColor">
-                            75
+                            <span class="small">
+                                75
+                            </span>
                         </div>
                     </article>
                     <div class="introButton">
