--- a/html/homePage.html
+++ b/html/homePage.html
@@ -138,6 +138,7 @@
         </section>
     </section>
     @@include('layout/footer.html')
+    @@include('layout/supportPage.html')
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="js/homePage.js"></script>
