商品首頁、商品頁確認

--- a/html/productSingle.html
+++ b/html/productSingle.html
@@ -94,6 +94,9 @@
                             </span>
                         </div>
                         <div class="like mainColor deepBgColor">
+                            <div class="pic">
+                                <img src="assets/image/products_like_likeWhite.png" alt="">
+                            </div>
                             <span class="small">
                                 75
                             </span>
