Modify 1.改變class名稱 close = close3D 2.燈箱圓邊 3.按鈕粗體修掉 4.style.scss 修改scss路徑檔名

--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -28,11 +28,10 @@
 
     <title>會員中心</title>
 </head>
+
 <body>
-        @@include('layout/header.html',{
-            "headerClass":"SurroundViewHeader"
-        })
-    
+    @@include('layout/header.html',{ "headerClass":"SurroundViewHeader" })
+
     <!--3D背景-->
     <div id="panorama">
         <!-- <button type="button" class="navButtonClick_button">導覽列</button> -->
@@ -86,7 +85,7 @@
                     <button class="button confirmTheChanges epFBgColor" type="button">確認</button>
                 </span>
             </p>
-            <span class="close"><i class="fas fa-times"></i></span>
+            <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
             <p class="information">會員編號：<span class="small">0123456（pk）</span></p>
@@ -117,7 +116,7 @@
                 <span class="subtitle">全部</span>
                 <span class="subtitle">分類</span>
             </p>
-            <span class="close"><i class="fas fa-times"></i></span>
+            <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
             <section class="commodityGroup">
@@ -162,7 +161,7 @@
                     <button class="button epFBgColor" type="button">歷史訂單</button>
                 </span>
             </p>
-            <span class="close"><i class="fas fa-times"></i></span>
+            <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
             <section class="record">
@@ -236,7 +235,7 @@
                     <button class="button epFBgColor characterConfirmation" type="button">確認</button>
                 </span>
             </p>
-            <span class="close"><i class="fas fa-times"></i></span>
+            <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
             <section class="main">
@@ -312,7 +311,7 @@
                 <!-- <button class="button epFBgColor" type="button">目前上架</button> -->
                 <!-- <button class="button epFBgColor" type="button">瀏覽紀錄</button> -->
             </section>
-            <span class="close"><i class="fas fa-times"></i></span>
+            <span class="close3D"><i class="fas fa-times"></i></span>
         </section>
         <main>
             <section class="commodityGroup">
