--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -21,48 +21,68 @@
             <div class="size">
                 <div class="ring">
                     <!-- 公仔類 -->
-                    <div class="door" id="toys">
+                    <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
-                            <div class="text">
-                                <p>公仔類</p>
-                            </div>
+                            <div class="wrap">
+                                <div class="pic">
+                                    <img src="../assets/image/galleryDoor_door04.gif" alt="gelleryDoorImage">
+                                </div>
+                                <div class="text">
+                                    <p>公仔類</p>
+                                </div>
+                            </div>  
                         </a>
                     </div>
                     <!-- 品牌合作 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
-                            <div class="text">
-                                <p>品牌合作</p>
-                            </div>
+                            <div class="wrap">
+                                <div class="pic">
+                                    <img src="../assets/image/galleryDoor_door05.gif" alt="gelleryDoorImage">
+                                </div>
+                                <div class="text">
+                                    <p>品牌合作</p>
+                                </div>
+                            </div>  
                         </a>
                     </div>
                     <!-- 展示區 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
-                            <div class="text">
-                                <p>展示區</p>
-                            </div>
+                            <div class="wrap">
+                                <div class="pic">
+                                    <img src="../assets/image/galleryDoor_door01.gif" alt="gelleryDoorImage">
+                                </div>
+                                <div class="text">
+                                    <p>展示區</p>
+                                </div>
+                            </div>  
                         </a>
                     </div>
                     <!-- 雕塑類 -->
                     <div class="door">
                         <a href="./gellery.html">
-                            <img src="../assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
-                            <div class="text">
-                                <p>雕塑類</p>
-                            </div>
+                            <div class="wrap">
+                                <div class="pic">
+                                    <img src="../assets/image/galleryDoor_door02.gif" alt="gelleryDoorImage">
+                                </div>
+                                <div class="text">
+                                    <p>雕塑類</p>
+                                </div>
+                            </div>  
                         </a>
                     </div>
                     <!-- 畫作類 -->
                     <div class="door">
-                        <a href="https://www.facebook.com/">
-                            <img src="../assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
-                            <div class="text">
-                                <p>畫作類</p>
-                            </div>
+                        <a href="./gellery.html">
+                            <div class="wrap">
+                                <div class="pic">
+                                    <img src="../assets/image/galleryDoor_door03.gif" alt="gelleryDoorImage">
+                                </div>
+                                <div class="text">
+                                    <p>畫作類</p>
+                                </div>
+                            </div>  
                         </a>
                     </div>
                 </div>
