--- a/html/listing.html
+++ b/html/listing.html
@@ -29,7 +29,8 @@
     <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/header.js"></script>
-    <header>
+    @@include('layout/headerNormal.html')
+    <!-- <header>
         <section class="headerNormalContain">
             <section class="logoContain">
                 <div class="logo">
@@ -94,7 +95,7 @@
                 </div>
             </nav>
         </section>
-    </header>
+    </header> -->
 
     <!-- 拍賣流程步驟 -->
     <section id="listingVue">
