--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article</title>
+    <!-- 縮圖 -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
@@ -13,8 +15,27 @@
     <!-- @@include('layout/header.html') -->
     @@include('layout/header.html',{"headerClass":""})
     <section class="articleContent">
-        <h2 class="deepColor">藝論</h2>
+        <div class="mainTitle">
+            <h1 class="deepColor">
+                藝‧論
+            </h1>
+            <!-- <p>
+                在這裡發現更多的美好，<br>
+                藝論那些最新的事，<br>
+                藝論那些美好的事，<br>
+                更多的美好在這裡發現。
+            </p> -->
+        </div>
+        <!-- 2022年3月2日星期三 -->
+        <!-- WEDNESDAY, 2ND MARCH 2022 -->
+        <div class="subTitle">
+            <h2 class="deepColor">
+                WEDNESDAY, 2ND MARCH 2022
+            </h2>
+            <a href="" class="square">刊登</a>
+        </div>
         <section class="wrap flat">
+            <!-- 最多68個字 -->
             <a href="">
                 <div class="item">
                     <div class="pic">
@@ -22,7 +43,7 @@
                     </div>
                     <div class="txt">
                         <h4 class="deepColor">這是一個背包</h4>
-                            <p class="lightColor small">這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
+                        <p class="lightColor small">一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
                     </div>
                 </div>
             </a>
@@ -40,6 +61,33 @@
             <a href="">
                 <div class="item">
                     <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_30M.png" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">盤子的歷史</h4>
+                        <p class="lightColor small">
+                            物價飆漲，甚麼都漲就連海平面也漲，為什麼我的錢包就是沒有漲？為了這個問題，我深入研究了許久，終於得到答案。
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="item">
+                    <div class="pic">
+                        <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
+                    </div>
+                    <div class="txt">
+                        <h4 class="deepColor">花畫畫畫花</h4>
+                            <p class="lightColor small">但你不願 你不再 你不再 你不願再想起,有我的過去 有我的記憶,你曾說 曾經你說過 我藏著秘密，我不夠透明 我不夠真心。
+                            </p>
+                    </div>
+                </div>
+            </a>
+        </section>
+        <section class="wrap twoRows">
+            <a href="">
+                <div class="item">
+                    <div class="pic">
                         <img src="assets/image/articleAll_articleContent_glass.png" alt="">
                     </div>
                     <div class="txt">
@@ -53,35 +101,11 @@
             <a href="">
                 <div class="item">
                     <div class="pic">
-                        <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
+                        <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
                     </div>
                     <div class="txt">
-                        <h4 class="deepColor">花畫畫畫花</h4>
-                            <p class="lightColor small">
-                                雨 我是大雨降落在你身上 卻弄壞衣裳我只是想 和你玩耍待在你身旁 欣賞你的光芒。但你不願 你不再 你不再 你不願再想起,有我的過去 有我的記憶,你曾說 曾經你說過 我藏著秘密，我不夠透明 我不夠真心。
-                            </p>
-                    </div>
-                </div>
-            </a>
-        </section>
-        <section class="wrap newest">
-            <a href="">
-                <div class="item">
-                    <div class="pic">
-
-                    </div>
-                    <div class="txt">
-
-                    </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="item">
-                    <div class="pic">
-
-                    </div>
-                    <div class="txt">
-
+                        <h4 class="deepColor">看起來普通的氣球</h4>
+                        <p class="lightColor small">它不只是一顆氣球，nonono它是一顆氣球。跟知名大師聯名，買到賺到，因為它是一顆金屬氣球，怎麼樣玩它都不會破。</p>
                     </div>
                 </div>
             </a>
@@ -90,72 +114,84 @@
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/article_articleContent_beBear.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">盤子的歷史</h4>
+                        <p class="lightColor small">物價飆漲，甚麼都漲就連海平面也漲，為什麼我的錢包就是沒有漲？
+                        </p>
                     </div>
                 </div>
             </a>
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_30M.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">看起來普通的氣球</h4>
+                        <p class="lightColor small">它不只是一顆氣球，nonono它是一顆氣球。跟知名大師聯名，買到賺到，因為它是一顆金屬氣球。</p>
                     </div>
                 </div>
             </a>
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_matthew.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">這是一個背包</h4>
+                        <p class="lightColor small">這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
                     </div>
                 </div>
             </a>
         </section>
         <section class="wrap fourRows">
+            <!-- 最多68個字 -->
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_silk.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">這是一個背包</h4>
+                        <p class="lightColor small">一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。這是一個你買不起的背包，因為它是跟設計師聯名。</p>
                     </div>
                 </div>
             </a>
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">看起來普通的氣球</h4>
+                        <p class="lightColor small">它不只是一顆氣球，nonono它是一顆氣球。跟知名大師聯名，買到賺到，因為它是一顆金屬氣球，怎麼樣玩它都不會破。</p>
                     </div>
                 </div>
             </a>
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_30M.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">盤子的歷史</h4>
+                        <p class="lightColor small">
+                            物價飆漲，甚麼都漲就連海平面也漲，為什麼我的錢包就是沒有漲？為了這個問題，我深入研究了許久，終於得到答案。
+                        </p>
                     </div>
                 </div>
             </a>
             <a href="">
                 <div class="item">
                     <div class="pic">
-
+                        <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
                     </div>
                     <div class="txt">
-
+                        <h4 class="deepColor">花畫畫畫花</h4>
+                            <p class="lightColor small">但你不願 你不再 你不再 你不願再想起,有我的過去 有我的記憶,你曾說 曾經你說過 我藏著秘密，我不夠透明 我不夠真心。
+                            </p>
                     </div>
                 </div>
             </a>
