the listing page adds import links

--- a/html/listing.html
+++ b/html/listing.html
@@ -43,6 +43,7 @@
                     <li style="--animation-order: 1;">
                         <input id="navMenu" type="checkbox">
                         <label for="navMenu" class="deepColor">
+                            <a href="galleryDoor.html"></a>
                                 <span>藝廊</span>
                                 <i class="fa-solid fa-angle-down"></i>
                             </a>
@@ -56,16 +57,16 @@
                         </ul>
                     </li>
                     <li style="--animation-order: 2;" >
-                        <a href="/" class="deepColor">拍賣廳</a>
+                        <a href="prouductAll.html" class="deepColor">拍賣廳</a>
                     </li>
                     <li style="--animation-order: 3;">
-                        <a href="/" class="deepColor">藝論</a>
+                        <a href="articleAll.html" class="deepColor">藝論</a>
                     </li>
                     <li style="--animation-order: 4;">
-                        <a href="/" class="deepColor">關於我們</a>
+                        <a href="about.html" class="deepColor">關於我們</a>
                     </li>
                     <li style="--animation-order: 5;">
-                        <a href="/" class="deepColor">會員中心</a>
+                        <a href="3dSurroundView.html" class="deepColor">會員中心</a>
                     </li>
                     <li style="--animation-order: 6;">
                         <section class="memberList">
@@ -83,8 +84,8 @@
                     </li>
                     <li style="--animation-order: 7;">
                         <div class="login">
-                            <a href="" class="whiteRound">登入</a>
-                            <a href="" class="round">上架</a>
+                            <a href="login.html" class="whiteRound">登入</a>
+                            <a href="listing.html" class="round">上架</a>
                         </div>
                     </li>
                 </ul>
