網站入口頁面新增

--- a/html/about.html
+++ b/html/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
     <!-- OwlCarousel -->
-    <link rel="stylesheet" href="assets/css/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="assets/owlCss/owl.carousel.min">
+    <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- css -->
