--- a/html/about.html
+++ b/html/about.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
     <!-- OwlCarousel -->
-    <link rel="stylesheet" href="assets/owlCss/owl.carousel.min">
-    <link rel="stylesheet" href="assets/owlCss/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../assets/owlCss/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/owlCss/owl.theme.default.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- css -->
@@ -21,8 +21,8 @@
     <!-- 伶_關於我們_main區域 -->
     <main class="aboutMain">
         <!-- 伶_關於我們_書架區_RWD -->
-        <section class="container introduceCardWrap">
-            <div class="owl-carousel owl-theme">
+        <section class="size introduceCardWrap">
+            <div class="raw owl-carousel owl-theme">
                 <div class="introduceCard">
                     <a href="#">
                         <h2>01</h2>
@@ -69,9 +69,8 @@
             <!-- 書架 -->
             <div class="bookshelf"></div>
         </section>
-
         <!-- 伶_關於我們_書架區_PC端 -->
-        <section class="container introduceCardWrapPC">
+        <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
                     <a href="#">
@@ -98,7 +97,7 @@
             <!-- 書架 -->
             <div class="bookshelf"></div>
         </section>
-        <section class="container introduceCardWrapPC">
+        <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
                     <a href="#">
@@ -124,49 +123,10 @@
             </div>
             <div class="bookshelf"></div>
         </section>
-
-        <!-- 伶_關於我們_報紙區_PC端 -->
-        <section class="container flipBookWrap">
-            <div class="pages" id="pages">
-                <div class="page pageCover">
-                    <h3>01</h3>
-                    <h2>關於我們</h2>
-                </div>
-                <div class="page">
-                    <div class="pageTitle">
-                        <hr>
-                            <h3>關於</h3>
-                        <hr>
-                    </div>
-                    <div class="pageContent">
-                        <div class="pic">
-                            <img src="assets/image/test_01.jpg" alt="">
-                            <h2 class="pageContentTitle">ABOUT</h2>
-                        </div>
-                        <div class="pageContentTxtBottom">
-                            <img src="assets/image/home_header_logo.png" alt="logo">
-                            <p>藝起成立於2022年，為虛構網站。<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="page">
-                    <hr>
-                    <h3>藝起</h3>
-                    <hr>
-                    <div class="pageContent">
-                        <div class="pic">
-                            <img src="assets/image/test_02.jpg" alt="">
-                        </div>
-                        <p>致力於提供各式創作藝術者一個展示作品的環境，建構享受潮流藝術的視覺饗宴，提倡藝術潮流的鑑賞；期待在藝術與收益之中取得平衡，媒合消費者與創作者，打造安全、安心、透明的交易平台，並持續推廣藝術創作。</p>
-                    </div>
-                </div>
-                <div class="page pageCover"></div>
-            </div>
-        </section>
     </main>
 
     <!-- 關於我們_頁尾區域 -->
-    @@include('layout/footer.html')
+    <!-- @@include('layout/footer.html') -->
 
     <!-- Jquery.js -->
     <script src="js/jquery/jquery.js"></script>
